modified manifest files

--- a/c_b_git/gitops-k8s/postgres-configmap.yml
+++ b/c_b_git/gitops-k8s/postgres-configmap.yml
@@ -1,3 +1,22 @@
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  name: postgres-config
+#  namespace: chalk-board-namespace
+#data:
+#  init.sql: |+
+#    CREATE DATABASE chalk_keycloak;
+#    CREATE DATABASE chalk_board;
+#    CREATE DATABASE chalk_ui;
+#    -- Your additional database initialization commands here
+#
+#  postgres-custom.conf: |+
+#    shared_preload_libraries = 'pg_stat_statements'
+#    pg_stat_statements.track = all
+#    max_connections = 200
+#    shared_buffers = 256MB
+#    effective_cache_size = 1GB
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,11 +27,49 @@ data:
     CREATE DATABASE chalk_keycloak;
     CREATE DATABASE chalk_board;
     CREATE DATABASE chalk_ui;
-    -- Your additional database initialization commands here
 
-  postgres-custom.conf: |+
-    shared_preload_libraries = 'pg_stat_statements'
-    pg_stat_statements.track = all
-    max_connections = 200
-    shared_buffers = 256MB
-    effective_cache_size = 1GB
+  pg_hba.conf: |+
+    # TYPE  DATABASE        USER            ADDRESS                 METHOD
+    host     replication     replicationuser         0.0.0.0/0        md5
+    # "local" is for Unix domain socket connections only
+    local   all             all                                     trust
+    # IPv4 local connections:
+    host    all             all             127.0.0.1/32            trust
+    # IPv6 local connections:
+    host    all             all             ::1/128                 trust
+    # Allow replication connections from localhost, by a user with the
+    # replication privilege.
+    local   replication     all                                     trust
+    host    replication     all             127.0.0.1/32            trust
+    host    replication     all             ::1/128                 trust
+
+    host all all all scram-sha-256
+  postgresql.conf: |+
+    data_directory = '/data/pgdata'
+    hba_file = '/config/pg_hba.conf'
+    ident_file = '/config/pg_ident.conf'
+
+    port = 5432
+    listen_addresses = '*'
+    max_connections = 100
+    shared_buffers = 128MB
+    dynamic_shared_memory_type = posix
+    max_wal_size = 1GB
+    min_wal_size = 80MB
+    log_timezone = 'Etc/UTC'
+    datestyle = 'iso, mdy'
+    timezone = 'Etc/UTC'
+
+    #locale settings
+    lc_messages = 'en_US.utf8'			# locale for system error message
+    lc_monetary = 'en_US.utf8'			# locale for monetary formatting
+    lc_numeric = 'en_US.utf8'			# locale for number formatting
+    lc_time = 'en_US.utf8'				# locale for time formatting
+
+    default_text_search_config = 'pg_catalog.english'
+
+    #replication
+    wal_level = replica
+    archive_mode = on
+    archive_command = 'test ! -f /data/archive/%f && cp %p /data/archive/%f'
+    max_wal_senders = 3
