--- a/c_b_git/gitops-k8s/otel-collector-deployment-service.yml
+++ b/c_b_git/gitops-k8s/otel-collector-deployment-service.yml
@@ -19,7 +19,7 @@ spec:
         - name: otel-collector
           image: otel/opentelemetry-collector-contrib:0.82.0
           imagePullPolicy: IfNotPresent
-          command:
+          args:
             - "--config=/etc/otelcol-contrib/otel-collector.yml"
           ports:
             # Example ports; uncomment or add others as needed
