--- a/c_b_git/gitops-k8s/redi-configuration.yml
+++ b/c_b_git/gitops-k8s/redi-configuration.yml
@@ -1,25 +1,45 @@
-# You can skip this file if you don't have custom configs.
+## You can skip this file if you don't have custom configs.
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  name: redis-config
+#  namespace: chalk-board-namespace
+#data:
+##  redis-custom.conf: |
+##    appendonly yes
+##    maxmemory 256mb
+##    maxmemory-policy allkeys-lru
+#
+#  update-node.sh: |
+#    #!/bin/sh
+#    REDIS_NODES="/data/nodes.conf"
+#    sed -i -e "/myself/ s/[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${POD_IP}/" ${REDIS_NODES}
+#    exec "$@"
+#  redis.conf: |+
+#    cluster-enabled yes
+#    cluster-require-full-coverage no
+#    cluster-node-timeout 15000
+#    cluster-config-file /data/nodes.conf
+#    cluster-migration-barrier 1
+#    appendonly yes
+#    protected-mode no
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: redis-config
   namespace: chalk-board-namespace
 data:
-#  redis-custom.conf: |
-#    appendonly yes
-#    maxmemory 256mb
-#    maxmemory-policy allkeys-lru
-
-  update-node.sh: |
-    #!/bin/sh
-    REDIS_NODES="/data/nodes.conf"
-    sed -i -e "/myself/ s/[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}\.[0-9]\{1,3\}/${POD_IP}/" ${REDIS_NODES}
-    exec "$@"
-  redis.conf: |+
+  redis.conf: |-
     cluster-enabled yes
-    cluster-require-full-coverage no
-    cluster-node-timeout 15000
-    cluster-config-file /data/nodes.conf
-    cluster-migration-barrier 1
+    cluster-config-file nodes.conf
+    cluster-node-timeout 5000
     appendonly yes
     protected-mode no
+    bind 0.0.0.0
+    port 6379
+  update-node.sh: |-
+    #!/bin/sh
+    # Update redis.conf with the correct node IP.
+    # This script is specific to a cluster setup and might need adjustments.
+    exec redis-server /conf/redis.conf
