--- a/c_b_git/gitops-k8s/learning-service-deployment.yml
+++ b/c_b_git/gitops-k8s/learning-service-deployment.yml
@@ -28,6 +28,8 @@ spec:
                   key: BPL_DEBUG_ENABLED
             - name: BPL_DEBUG_PORT
               value: "8001"
+            - name: LOGGING_CONFIG
+              value: "file:/config/logback-spring.xml"
             - name: SERVICE_TEAM_LS
               valueFrom:
                 configMapKeyRef:
@@ -99,8 +101,9 @@ spec:
               subPath: learning-service-application.yml
               readOnly: true
             - name: learning-config-volume
-              mountPath: /config/logback-config.xml # Mount logback config file
-              subPath: logback-config.xml
+              mountPath: /config/logback-spring.xml # Mount logback config file
+              subPath: logback-spring.xml
+              readOnly: true
       volumes:
         - name: services-files-volume
           emptyDir: {}
