--- a/c_b_git/gitops-k8s/redi-configuration.yml
+++ b/c_b_git/gitops-k8s/redi-configuration.yml
@@ -1,14 +1,13 @@
-## You can skip this file if you don't have custom configs.
-#apiVersion: v1
-#kind: ConfigMap
-#metadata:
-#  name: redis-config
-#  namespace: chalk-board-namespace
-#data:
-##  redis-custom.conf: |
-##    appendonly yes
-##    maxmemory 256mb
-##    maxmemory-policy allkeys-lru
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: redis-config
+  namespace: chalk-board-namespace
+data:
+  redis.conf: |
+    appendonly yes
+    maxmemory 256mb
+    maxmemory-policy allkeys-lru
 #
 #  update-node.sh: |
 #    #!/bin/sh
@@ -24,22 +23,22 @@
 #    appendonly yes
 #    protected-mode no
 
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: redis-config
-  namespace: chalk-board-namespace
-data:
-  redis.conf: |-
-    cluster-enabled yes
-    cluster-config-file nodes.conf
-    cluster-node-timeout 5000
-    appendonly yes
-    protected-mode no
-    bind 0.0.0.0
-    port 6379
-  update-node.sh: |-
-    #!/bin/sh
-    # Update redis.conf with the correct node IP.
-    # This script is specific to a cluster setup and might need adjustments.
-    exec redis-server /conf/redis.conf
+#apiVersion: v1
+#kind: ConfigMap
+#metadata:
+#  name: redis-config
+#  namespace: chalk-board-namespace
+#data:
+#  redis.conf: |-
+#    cluster-enabled yes
+#    cluster-config-file nodes.conf
+#    cluster-node-timeout 5000
+#    appendonly yes
+#    protected-mode no
+#    bind 0.0.0.0
+#    port 6379
+#  update-node.sh: |-
+#    #!/bin/sh
+#    # Update redis.conf with the correct node IP.
+#    # This script is specific to a cluster setup and might need adjustments.
+#    exec redis-server /conf/redis.conf
