--- a/c_b_git/gitops-k8s/logback-configmap.yml
+++ b/c_b_git/gitops-k8s/logback-configmap.yml
@@ -7,14 +7,9 @@ data:
   logback-spring.xml: |+
     <?xml version="1.0" encoding="UTF-8"?>
     <configuration debug="true">
+        <include resource="org/springframework/boot/logging/logback/defaults.xml"/>
+        <include resource="org/springframework/boot/logging/logback/console-appender.xml"/>
         <springProperty scope="context" name="application" source="spring.application.name"/>
-        <property name="CONSOLE_LOG_PATTERN" value="%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd'T'HH:mm:ss.SSSZ}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40c{1.}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}" />
-
-        <appender name="CONSOLE" class="ch.qos.logback.core.ConsoleAppender">
-            <encoder>
-                <pattern>${CONSOLE_LOG_PATTERN}</pattern>
-            </encoder>
-        </appender>
 
         <appender name="LOKI" class="com.github.loki4j.logback.Loki4jAppender">
             <batch>
@@ -30,6 +25,7 @@ data:
                 service_name=${application}
                 level=%level
             </labels>
+            <!-- Structured metadata (since Loki v2.9.0) -->
             <structuredMetadata>
                 level = %level,
                 thread = %thread,
@@ -38,7 +34,7 @@ data:
                 spanId = %mdc{spanId:-none}
             </structuredMetadata>
             <message>
-                <pattern>${FILE_LOG_PATTERN:-%m%n}</pattern>
+                <pattern>${FILE_LOG_PATTERN}</pattern>
             </message>
         </appender>
 
@@ -47,42 +43,3 @@ data:
             <appender-ref ref="CONSOLE"/>
         </root>
     </configuration>
-
-#    <?xml version="1.0" encoding="UTF-8"?>
-#    <configuration debug="true">
-#        <include resource="org/springframework/boot/logging/logback/defaults.xml"/>
-#        <include resource="org/springframework/boot/logging/logback/console-appender.xml"/>
-#        <springProperty scope="context" name="application" source="spring.application.name"/>
-#
-#        <appender name="LOKI" class="com.github.loki4j.logback.Loki4jAppender">
-#            <batch>
-#                <maxItems>100</maxItems>
-#                <timeoutMs>1000</timeoutMs>
-#            </batch>
-#            <http>
-#                <url>http://loki:${LOKI_PORT:-3100}/loki/api/v1/push</url>
-#            </http>
-#            <labels>
-#                app = ${application}
-#                host = ${HOSTNAME}
-#                service_name=${application}
-#                level=%level
-#            </labels>
-#            <!-- Structured metadata (since Loki v2.9.0) -->
-#            <structuredMetadata>
-#                level = %level,
-#                thread = %thread,
-#                class = %logger,
-#                traceId = %mdc{traceId:-none},
-#                spanId = %mdc{spanId:-none}
-#            </structuredMetadata>
-#            <message>
-#                <pattern>${FILE_LOG_PATTERN}</pattern>
-#            </message>
-#        </appender>
-#
-#        <root level="INFO">
-#            <appender-ref ref="LOKI" />
-#            <appender-ref ref="CONSOLE"/>
-#        </root>
-#    </configuration>
